frontend/validation-reports/test-log-2025-03-28T22-46-36.098Z.txt
Command: npm run test:once
Started: 2025-03-28T22:46:36.111Z

[ERROR] npm WARN config optional Use `--omit=optional` to exclude optional dependencies, or
npm WARN config `--include=optional` to include them.
npm WARN config 
npm WARN config     Default value does install optional deps unless otherwise omitted.

> tap-integration-platform-frontend@1.0.0 test:once
> jest --config=jest.config.unified.js

[ERROR] /home/ai-dev/Desktop/tap-integration-platform/frontend/jest.config.unified.js:8
import path from 'path';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1274:20)
    at Module._compile (node:internal/modules/cjs/loader:1320:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Module.require (node:internal/modules/cjs/loader:1225:19)
    at require (node:internal/modules/helpers:177:18)
    at requireOrImportModule (/home/ai-dev/Desktop/tap-integration-platform/frontend/node_modules/jest-util/build/requireOrImportModule.js:44:28)
    at readConfigFileAndSetRootDir (/home/ai-dev/Desktop/tap-integration-platform/frontend/node_modules/jest-config/build/readConfigFileAndSetRootDir.js:112:66)

Exited with code: 1
Duration: 802ms
